# rpi-os-tutorial

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
src/: console.rs  driver.rs  main.rs  memory.rs  print.rs  runtime_init.rs  synchronisation.rs
src/_arch/aarch64/: cpu.rs
src/_arch/aarch64/cpu/: smp.rs
src/bsp/: device_driver.rs  raspberrypi.rs
src/bsp/device_driver/: bcm.rs
src/bsp/device_driver/bcm/: bcm2xxx_gpio.rs  bcm2xxx_pl011_uart.rs
src/bsp/raspberrypi/: console.rs  cpu.rs
src/cpu/: mod.rs  smp.rs
